# UniMeetups

./: main.py  pyproject.toml
website/: __init__.py  auth.py  location_handling.py  misc.py  mongo_helpers.py  schools.txt  tags.txt  user.py  views.py
website/static/styles/: main.css
website/templates/: about.html  base.html  classmates.html  create_meetup.html  home.html  index.html  login.html  meetups.html  requests.html  send_mail.html  settings.html  sign-up.html  sign-up2.html
